--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,6 @@ doctype 5
 html
   head
     title polysocket
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/bootstrap.min.css')
   body
     block content
