I am not a designer

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,14 @@
 extends layout
 
 block content
-  h1 bitches
-  p Welcome to bitches
+  .splash
+    .container
+      .row
+        .col-lg-12.text-center
+          h1 PolySocket
+      .row
+        .col-lg-12
+          p Program pure WebSockets while supporting old browsers
+
+
+
