--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype 5
 html
   head
     title polysocket
-    link(rel='stylesheet', href='/bootstrap.min.css')
+    link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/css/main.css')
   body
     block content
