shims and shams

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,5 +4,7 @@ html
     title polysocket
     link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/main.css')
+    script(src='/vendor/json3.min.js')
+    script(src='/vendor/es5-shim.min.js')
   body
     block content
