--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,5 +6,6 @@ html
     link(rel='stylesheet', href='/css/main.css')
     script(src='/vendor/json3.min.js')
     script(src='/vendor/es5-shim.min.js')
+    script(src='/vendor/jquery-1.10.2.min.js')
   body
     block content
