--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,6 @@ html
     script(src='/vendor/json3.min.js')
     script(src='/vendor/es5-shim.min.js')
     script(src='/vendor/jquery-1.10.2.min.js')
+    script(src='/vendor/console-shim.min.js')
   body
     block content
