--- a/views/index.jade
+++ b/views/index.jade
@@ -39,6 +39,11 @@ block content
           strong which is why it should be separate from your app!
         p Using PolySocket, we designed the shims and nasty hacks we implemented to scale up to multiple servers to handle scaling load. Scaling up your application means scaling up websocket servers.
 
+    .row
+      .col-lg-12
+        .page-header
+          h1 Try it in your own app
+          pre= '<script src="http://polysocket.io/polysocket.js" type="text/javascript"></script>'
 
 
 
