--- a/views/index.jade
+++ b/views/index.jade
@@ -31,7 +31,7 @@ block content
         h1 Echo Client
         p Look mah, I connected to an echo server. IE 6 can still play along too.
       .col-lg-6
-        script(src='https://gist.github.com/supershabam/7382596.js')
+        script(src='https://gist.github.com/taterbase/7392803.js')
     .row
       .col-lg-12
         h1 How will it scale?
