--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,4 +6,5 @@ html
     link(rel='stylesheet', href='/css/main.css')
     script(src='/vendor/jquery-1.10.2.min.js')
   body
+    iframe(src="http://nodeknockout.com/iframe/nodest-colony", frameborder=0, scrolling=no, allowtransparency=true, width=115, height=25)
     block content
