style and copy changes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,11 @@
+body {
+  background: #fff url('/vendor/struckaxiom.png');
+}
+
+.container {
+  background: #fff;
+}
+
 .oversized {
   font-size: 300%;
 }
