moves nko vote button

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,7 @@ block content
   header.header
     .container
       .jumbotron
+        iframe.pull-right(src="http://nodeknockout.com/iframe/nodest-colony", frameborder=0, scrolling=no, allowtransparency=true, width=115, height=25)
         h1 PolySocket 
         p.lead Develop realtime apps with pure WebSockets, yet still support old browsers and crummy networks
   .container.text-center
