--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype 5
 html
   head
-    title polysocket
+    title PolySocket
     link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/main.css')
     script(src='/vendor/jquery-1.10.2.min.js')
