--- a/views/index.jade
+++ b/views/index.jade
@@ -31,13 +31,15 @@ block content
       .panel-body
         .row
           .col-lg-6
-            h3 Echo server
+            h3 chat server
             script(src="https://gist.github.com/supershabam/7382515.js")
           .col-lg-6
-            h3 Echo client
+            h3 chat client
             script(src='https://gist.github.com/supershabam/7382596.js')
       .panel-footer.text-center
-        h2 Did you notice the use of WebSockets!?
+        h2 Woah! Only WebSockets in the server!?
+        p.lead Yes, that's right. No hard to scale/maintain/understand hacks in your application code!
+        p.lead Oh, and use whatever backend language you want.
     .row
       .col-lg-12
         .page-header
