--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block content
       .jumbotron
         iframe.pull-right(src="http://nodeknockout.com/iframe/nodest-colony", frameborder=0, scrolling=no, allowtransparency=true, width=115, height=25)
         h1 PolySocket 
-        p.lead Develop realtime apps with pure WebSockets, yet still support old browsers and crummy networks
+        p.lead Develop realtime apps using only WebSockets, yet still support old browsers and crummy networks
   .container.text-center
     .panel.panel-info
       .panel-heading
