clearer that we configured polling

--- a/views/demo.jade
+++ b/views/demo.jade
@@ -28,13 +28,13 @@ mixin demo()
           ul
             li 
               strong That's no WebSocket
-              span : we configured PolySocket to use xhr-polling instead of WebSocket (check dev tools).
+              span : we configured this demo to use xhr-polling instead of WebSockets (check dev tools).
             br
             li 
-              strong No changes to the server. 
+              strong No changes to the WebSocket server. 
               span In fact... we don't even control the demo server. We're connecting to a 
               em pure 
-              span websocket server used in html5 demos (thanks Remy).
+              span WebSocket server used in html5 demos (thanks Remy).
             br
             li 
               strong A true WebSocket polyfill 
